# Agent-superthinking

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DELIVERY.md  INDEX.md  INDEX_METHODS.md  INDEX_PEOPLE.md  LEARNING.md  LICENSE  MODERATOR.md  PROFILE_SCHEMA.md  README.md  RELEASE_NOTES.md  SCHEMA.md  SKILL.md  config.yaml  pyproject.toml  test_jury.py  test_router.py  updated_SKILL.md  v6_ARCHITECTURE.md  v6_DATA_FLOW.md  v6_INTERFACES.md  v6_MIGRATION.md  v6_TEST_PLAN.md
docs/: CI_INTEGRATION.md  CLI_DESIGN.md  CONTRIBUTING.md  DEMO_RECORDING.md  E2E_SCENARIOS.md  EXAMPLES.md  METHODS_INDEX.md  METHOD_CALL_PROTOCOL_DRAFT.md  PEOPLE_INDEX.md  PERFORMANCE_BASELINE.md  PHASE2.1_HANDOFF.md  PHASE2.2_HANDOFF.md  PHASE2.3_HANDOFF.md  PHASE2.4_HANDOFF.md  PHASE2.5_HANDOFF.md  PHASE2.6_HANDOFF.md  PHASE3.1_HANDOFF.md  PHASE3.2_HANDOFF.md  PHASE3.3_HANDOFF.md  PHASE3.4_HANDOFF.md  PHASE3.5_HANDOFF.md  PHASE3.6_HANDOFF.md  PORTABILITY_CHECKLIST.md  QA_HANDOFF.md  RELIABILITY_MATRIX.md  TEST_BASELINE.md  TEST_DEPS.md  USER_GUIDE.md  V5_PERSPECTIVE_V6_ADAPTATION.md  V6_FINAL_REPORT.md  V6_QA_REPORT.md  V6_TEST_SCENARIOS.md  v5_CORE_SUMMARY.md  v5_PYTHON_STDLIB_NOTES.md  v5_REUSABLE_VS_REWRITE.md
docs/v-journal/: README.md
examples/: feedback_example.md
profiles/: default.json
scripts/scripts/: e2e_runner.py  run_tests.ps1  run_tests.sh  sketch_to_json.py  verify_v6_integration.py
src/learning/: __init__.py  expert_combination_tracker.py  feedback_collector.py  profile_manager.py  (+1 more)
tests/: test_jury_analysis_metadata.py  test_team_integration.py  test_v6_smoke.py
(+274 files in other folders)
